# MLOps

./: .gitignore  README.md  mlflow.db  pyproject.toml
mlartifacts/1/models/m-319e5900adc54cdcb86e066960f3959d/artifacts/: MLmodel  conda.yaml
mlartifacts/1/models/m-3618c9a8a62f4a27830d943513518d84/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlartifacts/1/models/m-8ef3f8cc937548c3b5b5333a9eadbfd3/artifacts/: MLmodel  conda.yaml  requirements.txt
mlartifacts/1/models/m-9742528860434c569af10953340c4209/artifacts/: MLmodel  conda.yaml
mlartifacts/1/models/m-afa52e421da840e5a187da05c37fdaf3/artifacts/: MLmodel
mlartifacts/1/models/m-e5f079c9324747a4bf2448144b1437a6/artifacts/: MLmodel
mlartifacts/1/models/m-f5de448de5fa4b3d850b8b7e51d8f1b9/artifacts/: MLmodel
models/: feature_importance_permutation.csv
notebooks/: 01_data_preparation.ipynb  02_model_training.ipynb  03_hyperparameter_optimization.ipynb  04_feature_importance_threshold.ipynb
