[project]
name = "credit-scoring-mlops"
version = "0.1.0"
description = "Credit Scoring MLOps Project"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "mlflow>=2.10.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "missingno>=0.5.0",
    "optuna>=3.0.0",
    "imbalanced-learn>=0.11.0",
    "python-dotenv>=1.0.0",
]
